--- a/toko_app/static/toko_app/css/daftar-barang.css
+++ b/toko_app/static/toko_app/css/daftar-barang.css
@@ -21,8 +21,8 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -77,7 +77,6 @@ nav {
 	width: 700px;
 	border: none;
 	height: 30px;
-	font-size: 20px;
 }
 .bar form button {
 	font-size: 20px;
@@ -85,92 +84,89 @@ nav {
 	border: none;
 }
 
-nav a{
 
+nav a{
 	text-decoration: none;
 	display: flex;
 	align-items: center;
 	color: white;
 	font-size: 20px;
-
 }
 
 /* nav akhir */
-
-
 
 /* container */
 .container {
 	width: 1200px;
 	margin: 20px auto;
-	display: grid;
-	grid-template-columns: repeat(4,1fr);
-	gap: 60px;
-	position: relative;
-	top: -300px;
+}
+.container-nav{
+	width: 1200px;
+	margin: 20px auto;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.container-nav a:first-child{
+	background-color: teal;
+}
+.container-nav a{
+	text-decoration: none;
+	background-color: red;
+	padding: 10px;
+	border-radius: 5px;
+	color: white;
+}
+table{
+	text-align: left;
+	width: 1200px;
+}
+table,tr {
+	border-bottom: 1px solid rgb(202, 199, 199);
+}
+th,td {
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
-.container-slide {
-	position: relative;
-	width: 1300px;
-	margin:auto;
+.container table tr a:first-child{
+	background-color: teal;
 }
 
-
-.kiri {
-	animation-name: effect ;
-	animation-duration: 1s;
-}
-
-@keyframes effect {
-	from {
-		opacity: .5;
-	}
-	to {
-		opacity: 1;
-	}
-}
-
-
-.container-slide .kiri {
-	width: 1300px;
-	background-image: linear-gradient(rgb(43, 189, 238),white);
-	height: 500px;
-}
-.container-slide .kiri.dua {
-	width: 1300px;
-	background-image: linear-gradient(rgb(42, 79, 243),white);
-	height: 500px;
-}
-.container-slide .kiri.tiga {
-	width: 1300px;
-	background-image: linear-gradient(teal,white);
-	height: 500px;
-}
-.container-slide .kiri.empat {
-	width: 1300px;
-	background-image: linear-gradient(rgb(247, 77, 77),white);
-	height: 500px;
-}
-.card {
-	width: 255px;
-	height: 365px;
-	box-shadow: 2px 2px 5px rgba(0,0,0,.2);
-}
-.gambar {
-	height: 240px;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-color: white;
-	background-position: center;
+.container table tr a{
+	text-decoration: none;
+	background-color: red;
+	padding: 5px;
+	border-radius: 5px;
+	color: white;
 }
 
 
-.keterangan-barang {
-	margin: 10px;
+.cari {
+	display: flex;
 }
-.keterangan-barang > * {
-	margin-bottom: 10px;
+.cari input {
+	width: 300px;
+	padding: 5px;
+	font-size: 20px;
+	border: 1px solid rgb(212, 208, 208);
+
+}
+.cari button {
+	border: none;
+	width: 70px;
+	padding: 5px;
+	background-color: peru;
+	color: white;
+	font-size: 20px;
+}
+
+.container button {
+	border: none;
+	padding: 5px;
+	background-color: green;
+	color: white;
+	border-radius: 5px;
 }
 
 
@@ -178,22 +174,40 @@ nav a{
 
 
 
-/* akhir container */
-
-
-
-
-
-
-
-
-
-
-
-
-/* responsif */
 
 @media (max-width: 768px) {
+	.container-nav {
+		width: 90%;
+		margin: 20px auto;
+		display: grid;
+		grid-template-columns: 1fr;
+		grid-template-rows: 1fr 2fr;
+	}
+	.container {
+		width: 90%;
+		margin: 20px auto;
+		display: grid;
+	}
+
+	.container table tr a{
+		display: inline-block;
+		margin-bottom: 10px;
+	}
+
+	table tr th {
+		padding-right: 10px;
+	}
+
+	table tr td img{
+		width: 70px;
+		height: 70px;
+		margin-right: 10px;
+		margin-left: 10px;
+	}
+
+	table {
+		width: 430px;
+	}
 
 	nav {
 		width: 100%;
@@ -205,15 +219,5 @@ nav a{
 		width: 250px	;
 	}
 
-	.container {
-		width: 90%;
-		margin: 20px auto;
-		display: grid;
-		justify-items: center;
-		grid-template-columns: 1fr;
 
-	}
 }
-
-/* akhir responsif */
-
