--- a/toko_app/static/toko_app/css/update_barang.css
+++ b/toko_app/static/toko_app/css/update_barang.css
@@ -23,6 +23,7 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -50,7 +51,8 @@ table {
 
 
 
-/* my code */
+
+
 
 
 /* nav */
@@ -77,7 +79,6 @@ nav {
 	width: 700px;
 	border: none;
 	height: 30px;
-	font-size: 20px;
 }
 .bar form button {
 	font-size: 20px;
@@ -85,135 +86,87 @@ nav {
 	border: none;
 }
 
-nav a{
 
+nav a{
 	text-decoration: none;
 	display: flex;
 	align-items: center;
 	color: white;
 	font-size: 20px;
-
 }
 
 /* nav akhir */
 
 
+/* form */
 
-/* container */
-.container {
+.form {
 	width: 1200px;
 	margin: 20px auto;
-	display: grid;
-	grid-template-columns: repeat(4,1fr);
-	gap: 60px;
-	position: relative;
-	top: -300px;
+}
+.form form div {
+	margin-bottom: 20px;
+}
+.form form div label {
+	display: inline-block;
+	width: 200px;
+}
+.form form h1{
+	margin-bottom: 20px;
+	font-size: 20pt;
+	font-weight: bold;
+}
+.form form div > input {
+	width: 700px;
+}
+.form form .kategori select{
+	width: 300px;
+}
+.form form .deskripsi {
+	display: flex	;
+}
+.form .foto-banyak {
+	display: flex;
+}
+.form .foto-banyak img {
+	margin-right:100px;
 }
 
-.container-slide {
-	position: relative;
-	width: 1300px;
-	margin:auto;
+.form .input-banyak {
+	display: block;
 }
 
-
-.kiri {
-	animation-name: effect ;
-	animation-duration: 1s;
-}
-
-@keyframes effect {
-	from {
-		opacity: .5;
-	}
-	to {
-		opacity: 1;
-	}
-}
-
-
-.container-slide .kiri {
-	width: 1300px;
-	background-image: linear-gradient(rgb(43, 189, 238),white);
-	height: 500px;
-}
-.container-slide .kiri.dua {
-	width: 1300px;
-	background-image: linear-gradient(rgb(42, 79, 243),white);
-	height: 500px;
-}
-.container-slide .kiri.tiga {
-	width: 1300px;
-	background-image: linear-gradient(teal,white);
-	height: 500px;
-}
-.container-slide .kiri.empat {
-	width: 1300px;
-	background-image: linear-gradient(rgb(247, 77, 77),white);
-	height: 500px;
-}
-.card {
-	width: 255px;
-	height: 365px;
-	box-shadow: 2px 2px 5px rgba(0,0,0,.2);
-}
-.gambar {
-	height: 240px;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-color: white;
-	background-position: center;
+.form .input-banyak a {
+    background-color: white;
+    color:  blue;
 }
 
 
-.keterangan-barang {
-	margin: 10px;
+.form .input-banyak br {    
 }
-.keterangan-barang > * {
-	margin-bottom: 10px;
+
+
+.form button {
+	border: none;
+	background-color: teal;
+	color: white;
+	padding: 10px;
+	border-radius: 5px;
+	font-size: 15pt;
+}
+.form a {
+	background-color: maroon;
+	display: inline-block;
+	width: 100px;
+	padding: 14px 0;
+	text-align: center;
+
+	text-decoration: none;
+	color: white;
+	border-radius: 5px;
+	font-size: 15pt;
 }
 
 
 
-
-
-
-/* akhir container */
-
-
-
-
-
-
-
-
-
-
-
-
-/* responsif */
-
-@media (max-width: 768px) {
-
-	nav {
-		width: 100%;
-	}
-	.bar {
-		width: 100%;
-	}
-	.bar form input {
-		width: 250px	;
-	}
-
-	.container {
-		width: 90%;
-		margin: 20px auto;
-		display: grid;
-		justify-items: center;
-		grid-template-columns: 1fr;
-
-	}
-}
-
-/* akhir responsif */
-
+/* akhir form */
