--- a/toko_app/templates/toko_app/index.html
+++ b/toko_app/templates/toko_app/index.html
@@ -26,10 +26,16 @@
         </div>
     </nav>
     <div class="container-slide">
-        <div class="kiri slide satu">keren</div>
-        <div class="kiri slide dua">biasa aja</div>
-        <div class="kiri slide tiga">mantap</div>
-        <div class="kiri slide empat">kali</div>
+        <div class="kiri slide satu">
+            <h1>Barang Berkualitas dan bermutu</h1>
+            <p>Bermotif cantik nan indah</p> 
+        </div>
+        <div class="kiri slide dua"><h1>Barang Berkualitas dan bermutu</h1>
+        <p>Bermotif cantik nan indah</p></div>
+        <div class="kiri slide tiga"><h1>Barang Berkualitas dan bermutu</h1>
+        <p>Bermotif cantik nan indah</p></div>
+        <div class="kiri slide empat"><h1>Barang Berkualitas dan bermutu</h1>
+        <p>Bermotif cantik nan indah</p></div>
     </div>
 
     <div class="container">
