--- a/toko_app/static/toko_app/css/tambah_barang.css
+++ b/toko_app/static/toko_app/css/tambah_barang.css
@@ -132,10 +132,10 @@ nav a{
 	margin-right:100px;
 }
 
-.form .input-banyak {
+.input-banyak{
 	display: grid;
 	grid-template-columns: 200px 200px 200px 200px 200px;
-	/* display: none; */
+	display: none;
 }
 
 .form button {
