--- a/toko_app/templates/toko_app/tambah_barang.html
+++ b/toko_app/templates/toko_app/tambah_barang.html
@@ -55,9 +55,12 @@
             <div class="foto-banyak">
                 <label for="foto">++</label>
                 <img src="" alt="" width="100px" height="100px">
-                <img src="" alt="" width="100px" height="100px">
-                <img src="" alt="" width="100px" height="100px">
-                <img src="" alt="" width="100px" height="100px">
+                <img src="" alt="" width="100px" height="100px" id="gambar">
+                <img src="" alt="" width="100px" height="100px" id="gambar">
+                <img src="" alt="" width="100px" height="100px" id="gambar">
+            </div>
+            <div class="foto-banyak">
+                
             </div>
             <div class="nama">
                 <label for="foto">*Nama</label>
@@ -96,24 +99,55 @@
         const gambar = document.querySelector(".foto-banyak img");
         const input = document.querySelector(".input-banyak input");
         
-        function masuk(){
+        gambar.onclick = function(){
             input.click();
         }
         // akhir gambar pertama
 
         function preview(){
-            const gambar = document.querySelectorAll(".foto-banyak img");
-            const input = document.querySelectorAll(".input-banyak .sampul");
+            const gambar = document.querySelector(".foto-banyak img");
+            const input = document.querySelector(".input-banyak input");
 
 
             const fileSampul = new FileReader();
-            fileSampul.readAsDataURL(input[0].files[0]);
+            fileSampul.readAsDataURL(input.files[0]);
 
             fileSampul.onload = function(e){
-                gambar[0].src = e.target.result;
+                gambar.src = e.target.result;
             }
         }
 
+
+    
+
+        const gambardua = document.querySelectorAll("#gambar");
+        const inputgambar = document.querySelectorAll(".coba");
+
+        console.log(inputgambar[2]);
+
+        for(let u = 0; u < 3; u++){
+             gambardua[u].onclick = function () {
+                inputgambar[u].click();
+            }
+
+            inputgambar[u].onchange = function() {
+
+                for(let k=0; k<inputgambar.length;k++){
+                    const filefoto = new FileReader();
+                    
+                    filefoto.onload = function(e){
+                        gambardua[k].src = e.target.result;
+                    }
+
+
+                    if(inputgambar[k].files[0]) {
+                        filefoto.readAsDataURL(inputgambar[k].files[0])
+                    }
+                }
+            }
+        }
+
+       
     </script>
 </body>
 
