--- a/toko_app/templates/toko_app/index.html
+++ b/toko_app/templates/toko_app/index.html
@@ -1,185 +1,111 @@
+{% extends 'toko_app/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'toko_app/css/style.css' %}">
-    <title>Document</title>
-</head>
+<div id="carouselExampleControls" class="carousel slide mt-3" data-ride="carousel">
 
-<body>
-    <nav>
-        <div class="bar">
-            <a href="">
-                <img src="{% static 'toko_app/img/logo.jpg' %}" alt="" width="40" height="40">
-                <h1>Dayak</h1>
-            </a>
-
-            <form action="">
-                <input type="text" name="cari" placeholder="cari">
-                <button type="submit">cari</button>
-            </form>
-
-            <a href="">Login</a>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="{% static 'toko_app/img/1.jpeg' %}" class="d-block w-100" alt="...">
         </div>
-    </nav>
-    <div class="container-slide">
-        <div class="kiri slide satu">
-            <h1>Barang Berkualitas dan bermutu</h1>
-            <p>Bermotif cantik nan indah</p> 
+        <div class="carousel-item">
+            <img src="{% static 'toko_app/img/2.jpeg' %}" class="d-block w-100" alt="...">
         </div>
-        <div class="kiri slide dua"><h1>Barang Berkualitas dan bermutu</h1>
-        <p>Bermotif cantik nan indah</p></div>
-        <div class="kiri slide tiga"><h1>Barang Berkualitas dan bermutu</h1>
-        <p>Bermotif cantik nan indah</p></div>
-        <div class="kiri slide empat"><h1>Barang Berkualitas dan bermutu</h1>
-        <p>Bermotif cantik nan indah</p></div>
+        <div class="carousel-item">
+            <img src="{% static 'toko_app/img/3.jpeg' %}" class="d-block w-100" alt="...">
+        </div>
     </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
 
-    <div class="container">
-        {% for b in barang %}
-            <div class="card"> 
-                <a href="">
-                    <div class="gambar" style="background-image: url('{{ b.gambar.url }}') ;">
+<div class="row mt-4">
+    <div class="col">
+        <p>Music</p>
+    </div>
+</div>
+
+<div class="row">
+
+    {% for m in musik %}
+
+        <div class="col-6 col-lg-2 mb-3">
+            <div class="card ">
+                <a href="" class="text-decoration-none">
+                    <img src="{% static 'toko_app/img/sape.png' %}" class="card-img-top" alt="..." width="150px" height="150px">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">Sape asli kayu jati</h5>
+                        <p class="text-body text-dark">Rp. 20.000</p>
+                        <p class="text-success">Kalbar coba</p>
                     </div>
                 </a>
-                <div class="keterangan-barang">
-                    <h1>{{ b.nama_barang }}</h1>
-                    <p style="font-weight: bold;">Rp {{ b.harga }}</p>
-                    <p style="color: chocolate;">Kalbar</p>
-                </div>
-            </div>
-        {% endfor %}
-        <!-- <div class="card">
-            <a href="">
-                <div class="gambar">
-                    <img src="{% static  'toko_app/img/tshirt.png' %}" alt="" width="100%" height="100%">
-                </div>
-            </a>
-            <div class="keterangan-barang">
-                <h1>Kaos simpel keren untuk anak muda</h1>
-                <p style="font-weight: bold;">Rp 20.000</p>
-                <p style="color: chocolate;">Kalbar</p>
             </div>
         </div>
-        <div class="card">
-            <a href="">
-                <div class="gambar">
-                    <img src="{% static  'toko_app/img/tshirt.png' %}" alt="" width="100%" height="100%">
-                </div>
-            </a>
-            <div class="keterangan-barang">
-                <h1>Kaos simpel keren untuk anak muda</h1>
-                <p style="font-weight: bold;">Rp 20.000</p>
-                <p style="color: chocolate;">Kalbar</p>
-            </div>
-        </div>
-        <div class="card">
-            <a href="">
-                <div class="gambar">
-                    <img src="{% static  'toko_app/img/tshirt.png' %}" alt="" width="100%" height="100%">
-                </div>
-            </a>
-            <div class="keterangan-barang">
-                <h1>Kaos simpel keren untuk anak muda</h1>
-                <p style="font-weight: bold;">Rp 20.000</p>
-                <p style="color: chocolate;">Kalbar</p>
-            </div>
-        </div>
-        <div class="card">
-            <a href="">
-                <div class="gambar">
-                    <img src="{% static  'toko_app/img/tshirt.png' %}" alt="" width="100%" height="100%">
-                </div>
-            </a>
-            <div class="keterangan-barang">
-                <h1>Kaos simpel keren untuk anak muda</h1>
-                <p style="font-weight: bold;">Rp 20.000</p>
-                <p style="color: chocolate;">Kalbar</p>
-            </div>
-        </div>
-        <div class="card">
-            <a href="">
-                <div class="gambar">
-                    <img src="{% static  'toko_app/img/tshirt.png' %}" alt="" width="100%" height="100%">
-                </div>
-            </a>
-            <div class="keterangan-barang">
-                <h1>Kaos simpel keren untuk anak muda</h1>
-                <p style="font-weight: bold;">Rp 20.000</p>
-                <p style="color: chocolate;">Kalbar</p>
-            </div>
-        </div>
-        <div class="card">
-            <a href="">
-                <div class="gambar">
-                    <img src="{% static  'toko_app/img/tshirt.png' %}" alt="" width="100%" height="100%">
-                </div>
-            </a>
-            <div class="keterangan-barang">
-                <h1>Kaos simpel keren untuk anak muda</h1>
-                <p style="font-weight: bold;">Rp 20.000</p>
-                <p style="color: chocolate;">Kalbar</p>
-            </div>
-        </div>
-        <div class="card">
-            <a href="">
-                <div class="gambar">
-                    <img src="{% static  'toko_app/img/tshirt.png' %}" alt="" width="100%" height="100%">
-                </div>
-            </a>
-            <div class="keterangan-barang">
-                <h1>Kaos simpel keren untuk anak muda</h1>
-                <p style="font-weight: bold;">Rp 20.000</p>
-                <p style="color: chocolate;">Kalbar</p>
-            </div>
-        </div>
-        <div class="card">
-            <a href="">
-                <div class="gambar">
-                    <img src="{% static  'toko_app/img/tshirt.png' %}" alt="" width="100%" height="100%">
-                </div>
-            </a>
-            <div class="keterangan-barang">
-                <h1>Kaos simpel keren untuk anak muda</h1>
-                <p style="font-weight: bold;">Rp 20.000</p>
-                <p style="color: chocolate;">Kalbar</p>
-            </div>
-        </div>
-        <div class="card">
-            <a href="">
-                <div class="gambar">
-                    <img src="{% static  'toko_app/img/tshirt.png' %}" alt="" width="100%" height="100%">
-                </div>
-            </a>
-            <div class="keterangan-barang">
-                <h1>Kaos simpel keren untuk anak muda</h1>
-                <p style="font-weight: bold;">Rp 20.000</p>
-                <p style="color: chocolate;">Kalbar</p>
-            </div>
-        </div> -->
+    {% endfor %}
+    
+</div>
+<div class="row mt-4">
+    <div class="col">
+        <p>Baju</p>
     </div>
+</div>
+
+<div class="row">
+    {% for b in baju %}
+        <div class="col-6 col-lg-2 mb-3">
+            <div class="card ">
+                <a href="" class="text-decoration-none">
+                    <img src="{{ b.gambar.url }}" class="card-img-top" alt="..." width="150px" height="150px" > 
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">{{ b.nama }}</h5>
+                        <p class="text-body text-dark">Rp. {{ b.harga }}</p>
+                        <p class="text-success">Kalbar coba</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    {% endfor %}
+    
+
+</div>
+<div class="row mt-4">
+    <div class="col">
+        <p>Celana</p>
+    </div>
+</div>
+
+<div class="row">
+    {% for c in celana %}
+        <div class="col-6 col-lg-2 mb-3">
+            <div class="card ">
+                <a href="" class="text-decoration-none">
+                    <img src="{{ c.gambar.url }}" class="card-img-top" alt="..." width="150px" height="150px">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">{{ c.nama }}</h5>
+                        <p class="text-body text-dark">Rp. {{ c.harga }}</p>
+                        <p class="text-success">Kalbar coba</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    {% endfor %}
+
+</div>
+<footer class="d-flex justify-content-between mt-5 mb-5 ">
+    <div>Copyright &copy; Dayak.com 2020. All rights reserved.</div>
+    <div>
+        <a href="#">Tentang</a> &middot;
+        <a href="#">Kontak</a> &middot;
+        <a href="#">Bantuan</a>
+    </div>
+</footer>
+</div>
 
 
-
-    <script>
-        let index = 0;
-        show();
-        function show(){
-            const slides = document.getElementsByClassName("slide")
-            for(let i = 0; i < slides.length; i++){
-                slides[i].style.display = "none";
-            }
-            index += 1;
-            if(index > slides.length){
-                index=1;
-            }
-            slides[index-1].style.display = "block";    
-            setTimeout(show,1500);
-        }
-    </script>
-</body>
-
-</html>
+{% endblock content %}
