--- a/toko_app/templates/toko_app/tambah_barang.html
+++ b/toko_app/templates/toko_app/tambah_barang.html
@@ -1,154 +1,82 @@
+{% extends 'toko_app/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'toko_app/css/tambah_barang.css' %}">
-    <link rel="stylesheet" href="{% static 'toko_app/css/select2.min.css' %}">
-    <title>tambah-barang</title>
-</head>
+<div class="row mt-3">
+    <div class="col-lg-12">
+        <h1>Tambah barang</h1>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-12">
+        <form class="mt-3">
+            <div class="form-group row" style="display: none;">
+                <label for="gambar" class="col-sm-2 col-form-label">Gambar</label>
+                <div class="col-sm-10 input-banyak">
+                    <input type="file">
+                    <input type="file" class="coba">
+                    <input type="file" class="coba">
+                    <input type="file" class="coba">
+                    <input type="file" class="coba">
+                </div>
+            </div>
+            <div class="form-group row ">
+                <label for="gambars" class="col-sm-2 col-form-label">Gambar</label>
+                <div class="col-sm-10 foto-banyak">
+                    <img src="{% static 'toko_app/img/index.png' %}" alt="" width="100px" height="100px">
+                    <img src="img/index.png" alt="" width="100px" height="100px" id="gambar">
+                    <img src="img/index.png" alt="" width="100px" height="100px" id="gambar">
+                    <img src="img/index.png" alt="" width="100px" height="100px" id="gambar">
+                    <img src="img/index.png" alt="" width="100px" height="100px" id="gambar">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="nama" class="col-sm-2 col-form-label">Nama</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="nama">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="harga" class="col-sm-2 col-form-label">Harga</label>
+                <div class="col-sm-10">
+                    <input type="number" name="harga" class="form-control" style="width: 25%;">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="kategori" class="col-sm-2 col-form-label">Kategori</label>
+                <div class="col-sm-10">
+                    <select class="js-example-basic-single" name="kategori" style="width: 25%;">
+                        <option value="AL">Alabama</option>
+                        ...
+                        <option value="WY">Wyoming</option>
+                    </select>
+                </div>
 
-<body>
-    <nav>
-        <div class="bar">
-            <a href="">
-                <img src="" alt="">
-                <a href="{% url 'index' %}">DAYAK</a>
-            </a>
-
-            <form action="">
-                <input type="text" name="cari" placeholder="cari">
-                <button type="submit">cari</button>
-            </form>
-
-            <a href="">Login</a>
-        </div>
-    </nav>
-
-
-    <div class="form">
-        <form action="" method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            <h1>Tambah barang</h1>
-            <!-- <div class="foto">
-                <label for="foto">*Foto</label>
-                {{ form.gambar }}
-                {{ formset.management_form }}
-                {% for f in formset %}
-                    {{ f.image }}
-                {% endfor %}
             </div>
-            <div class="foto-banyak">
-                <label for="foto">++</label>
-                <img src="" alt="" width="100px" height="100px">
-            </div> -->
-            <div class="input-banyak">
-                <label for="foto">*Foto</label>
-                    {{ form.gambar }}
-                    {{ formset.management_form }}
-                    {% for f in formset %}
-                    {{ f.image }}
-                    {% endfor %}
+            <div class="form-group row">
+                <label for="harga" class="col-sm-2 col-form-label">Deskripsi</label>
+                <div class="col-sm-10">
+                    <textarea class="form-control" rows="10" name="deskripsi"></textarea>
+                </div>
             </div>
-            <div class="foto-banyak">
-                <label for="foto">++</label>
-                <img src="" alt="" width="100px" height="100px">
-                <img src="" alt="" width="100px" height="100px" id="gambar">
-                <img src="" alt="" width="100px" height="100px" id="gambar">
-                <img src="" alt="" width="100px" height="100px" id="gambar">
+            <div class="form-group row">
+                <div class="col-sm-10">
+                    <button type="submit" class="btn btn-success">Tambah</button>
+                    <a href="" class="btn btn-danger">Batal</a>
+                </div>
             </div>
-            <div class="foto-banyak">
-                
-            </div>
-            <div class="nama">
-                <label for="foto">*Nama</label>
-                {{ form.nama_barang }}
-            </div>
-            <div class="harga">
-                <label for="harga">*Harga</label>
-                {{ form.harga }}
-            </div>
-            <div class="kategori">
-                <label for="kategori">*Kategori</label>
-                {{ form.kategori }}
-            </div>
-            <div class="deskripsi">
-                <label for="foto">*Deskripsi</label>
-                {{ form.deskripsi }}
-                <!-- <textarea name="" id="" cols="96" rows="10"></textarea> -->
-            </div>
-
-            <button type="submit">tambah barang</button>
-            <a href="{% url 'daftar-barang' %}">Batal</a>
         </form>
     </div>
 
 
-    <script src="{% static 'toko_app/js/jquery-3.5.1.min.js' %}"></script>
-    <script src="{% static 'toko_app/js/select2.min.js' %}"></script>
-    <script>
-        $(document).ready(function () {
-            $('.js-example-basic-single').select2();
-        });
-    </script>
+    <footer class="d-flex justify-content-between mt-5 mb-5 ">
+        <div>Copyright &copy; Dayak.com 2020. All rights reserved.</div>
+        <div>
+            <a href="#">Tentang</a> &middot;
+            <a href="#">Kontak</a> &middot;
+            <a href="#">Bantuan</a>
+        </div>
+    </footer>
+</div>
 
-    <script>
-        // ini untuk gambar yang pertama
-        const gambar = document.querySelector(".foto-banyak img");
-        const input = document.querySelector(".input-banyak input");
-        
-        gambar.onclick = function(){
-            input.click();
-        }
-        // akhir gambar pertama
-
-        function preview(){
-            const gambar = document.querySelector(".foto-banyak img");
-            const input = document.querySelector(".input-banyak input");
-
-
-            const fileSampul = new FileReader();
-            fileSampul.readAsDataURL(input.files[0]);
-
-            fileSampul.onload = function(e){
-                gambar.src = e.target.result;
-            }
-        }
-
-
-    
-
-        const gambardua = document.querySelectorAll("#gambar");
-        const inputgambar = document.querySelectorAll(".coba");
-
-        console.log(inputgambar[2]);
-
-        for(let u = 0; u < 3; u++){
-             gambardua[u].onclick = function () {
-                inputgambar[u].click();
-            }
-
-            inputgambar[u].onchange = function() {
-
-                for(let k=0; k<inputgambar.length;k++){
-                    const filefoto = new FileReader();
-                    
-                    filefoto.onload = function(e){
-                        gambardua[k].src = e.target.result;
-                    }
-
-
-                    if(inputgambar[k].files[0]) {
-                        filefoto.readAsDataURL(inputgambar[k].files[0])
-                    }
-                }
-            }
-        }
-
-       
-    </script>
-</body>
-
-</html>
+{% endblock content %}
