--- a/toko_app/templates/toko_app/daftar.html
+++ b/toko_app/templates/toko_app/daftar.html
@@ -53,7 +53,7 @@
                 <td>{{ brg.nama_barang }}</td>
                 <td>Rp. {{ brg.harga }}</td>
                 <td>99x</td>
-                <td><a href="" class="btn btn-success">Update</a> <a href="" class="btn btn-danger">Hapus</a></td>
+                <td><a href="{% url 'update-barang' brg.id %}" class="btn btn-success">Update</a> <a href="" class="btn btn-danger">Hapus</a></td>
             </tr>
         {% endfor %}
     </tbody>
