--- a/toko_app/templates/toko_app/tambah_barang.html
+++ b/toko_app/templates/toko_app/tambah_barang.html
@@ -10,14 +10,14 @@
     <div class="col-lg-12">
         <form class="mt-3" method="POST" enctype="multipart/form-data" action="{% url 'tambah-barang' %}">
             {% csrf_token %}
-            <div class="form-group row" >
+            <div class="form-group row" style="display: none;">
                 <label for="gambar" class="col-sm-2 col-form-label">Gambar</label>
                 <div class="col-sm-10 input-banyak">
                     {{ form.gambar.errors }}
                     {{ form.gambar }}
                     {{ formset.management_form }}
                     {% for forms in formset %}
-                        {{forms}}
+                        {{forms}} 
                         <!-- <input type="file" class="coba">
                         <input type="file" class="coba">
                         <input type="file" class="coba">
@@ -82,4 +82,7 @@
         </div>
     </footer>
 </div>
+
+
+<script src="{% static 'toko_app/js/tambah-barang.js' %}"></script>
 {% endblock content %}
