--- a/toko_app/templates/toko_app/update.html
+++ b/toko_app/templates/toko_app/update.html
@@ -1,108 +1,87 @@
+{% extends 'toko_app/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'toko_app/css/update_barang.css' %}">
-    <link rel="stylesheet" href="{% static 'toko_app/css/select2.min.css' %}">
-    <title>tambah-barang</title>
-</head>
-
-<body>
-    <nav>
-        <div class="bar">
-            <a href="">
-                <img src="" alt="">
-                <a href="{% url 'index' %}">DAYAK</a>
-            </a>
-
-            <form action="">
-                <input type="text" name="cari" placeholder="cari">
-                <button type="submit">cari</button>
-            </form>
-
-            <a href="">Login</a>
-        </div>
-    </nav>
-
-
-    <div class="form">
-        <form action="" method="POST" enctype="multipart/form-data">
+{% block content %}
+<div class="row mt-3">
+    <div class="col-lg-12">
+        <h1>Tambah barang</h1>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-12">
+        <form class="mt-3" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            <h1>Tambah barang</h1>
-            <!-- <div class="foto">
-                <label for="foto">*Foto</label>
-                {{ form.gambar }}
-                {{ formset.management_form }}
-                {% for f in formset %}
-                    {{ f.image }}
-                {% endfor %}
-            </div>
-            <div class="foto-banyak">
-                <label for="foto">++</label>
-                <img src="" alt="" width="100px" height="100px">
-            </div> -->
-            <div class="input-banyak">
-                <label for="foto">*Foto</label>
-
-                <div style="display: none;">
-                    {{ form.gambar}}
+            <div class="form-group row">
+                <label for="gambar" class="col-sm-2 col-form-label">Gambar</label>
+                <div class="col-sm-10 input-banyak">
+                    {{ form.gambar.errors }}
+                    {{ form.gambar }}
+                    {{ formset.management_form }}
+                    {% for forms in formset %}
+                        {{forms}}
+                    <!-- <input type="file" class="coba">
+                                            <input type="file" class="coba">
+                                            <input type="file" class="coba">
+                                            <input type="file" class="coba"> -->
+                    {% endfor %}
                 </div>
-                <!-- {{ formset.management_form }}
-                {% for f in formset %}
-                {{ f.image }}
-                {% endfor %} -->
             </div>
-            <div class="foto-banyak">
-                <label for="foto">++</label>
-                <img src="" alt="" width="100px" height="100px" onclick="klik()">
-                <img src="" alt="" width="100px" height="100px" >
-                <img src="" alt="" width="100px" height="100px">
-                <img src="" alt="" width="100px" height="100px">
+            <div class="form-group row ">
+                <label for="gambars" class="col-sm-2 col-form-label">Gambar</label>
+                <div class="col-sm-10 foto-banyak">
+                    <img src="{% static 'toko_app/img/index.png' %}" alt="" width="100px" height="100px">
+                    <img src="{% static 'toko_app/img/index.png' %}" alt="" width="100px" height="100px" id="gambar">
+                    <img src="{% static 'toko_app/img/index.png' %}" alt="" width="100px" height="100px" id="gambar">
+                    <img src="{% static 'toko_app/img/index.png' %}" alt="" width="100px" height="100px" id="gambar">
+                    <img src="{% static 'toko_app/img/index.png' %}" alt="" width="100px" height="100px" id="gambar">
+                </div>
             </div>
-            <div class="nama">
-                <label for="foto">*Nama</label>
-                {{ form.nama_barang }}
+            <div class="form-group row">
+                <label for="nama" class="col-sm-2 col-form-label">Nama</label>
+                <div class="col-sm-10">
+                    {{ form.nama_barang.errors }}
+                    {{ form.nama_barang }}
+                </div>
             </div>
-            <div class="harga">
-                <label for="harga">*Harga</label>
-                {{ form.harga }}
+            <div class="form-group row">
+                <label for="harga" class="col-sm-2 col-form-label">Harga</label>
+                <div class="col-sm-10">
+                    {{ form.harga.errors }}
+                    {{ form.harga }}
+                </div>
             </div>
-            <div class="kategori">
-                <label for="kategori">*Kategori</label>
-                {{ form.kategori }}
-            </div>
-            <div class="deskripsi">
-                <label for="foto">*Deskripsi</label>
-                {{ form.deskripsi }}
-                <!-- <textarea name="" id="" cols="96" rows="10"></textarea> -->
-            </div>
+            <div class="form-group row">
+                <label for="kategori" class="col-sm-2 col-form-label">Kategori</label>
+                <div class="col-sm-10">
+                    {{ form.kategori.errors }}
+                    {{ form.kategori }}
+                </div>
 
-            <button type="submit">tambah barang</button>
-            <a href="">Batal</a>
+            </div>
+            <div class="form-group row">
+                <label for="harga" class="col-sm-2 col-form-label">Deskripsi</label>
+                <div class="col-sm-10">
+                    {{ form.deskripsi }}
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-sm-10">
+                    <button type="submit" class="btn btn-success">Tambah</button>
+                    <a href="" class="btn btn-danger">Batal</a>
+                </div>
+            </div>
         </form>
     </div>
 
 
-    <script src="{% static 'toko_app/js/jquery-3.5.1.min.js' %}"></script>
-    <script src="{% static 'toko_app/js/select2.min.js' %}"></script>
-    <script>
-        $(document).ready(function () {
-            $('.js-example-basic-single').select2();
-        });
-    </script>
-    <script>
-            const link = document.querySelector(".input-banyak a").href;
-            const img = document.querySelector(".foto-banyak img");
-            const img2 = document.querySelector(".foto-banyak img");
-            img.src = link;
-            const input = document.querySelector(".input-banyak input")
-            function klik(){
-                input.click();
-            }
-    </script>
-</body>
+    <footer class="d-flex justify-content-between mt-5 mb-5 ">
+        <div>Copyright &copy; Dayak.com 2020. All rights reserved.</div>
+        <div>
+            <a href="#">Tentang</a> &middot;
+            <a href="#">Kontak</a> &middot;
+            <a href="#">Bantuan</a>
+        </div>
+    </footer>
+</div>
 
-</html>
+<script src="{% static 'toko_app/js/update.js' %}"></script>
+{% endblock content %}
