--- a/toko_app/templates/toko_app/update.html
+++ b/toko_app/templates/toko_app/update.html
@@ -10,19 +10,19 @@
     <div class="col-lg-12">
         <form class="mt-3" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            <div class="form-group row">
+            <div class="form-group row"  style="display: none;">
                 <label for="gambar" class="col-sm-2 col-form-label">Gambar</label>
                 <div class="col-sm-10 input-banyak">
                     {{ form.gambar.errors }}
                     {{ form.gambar }}
-                    {{ formset.management_form }}
-                    {% for forms in formset %}
-                        {{forms}}
+                    <!-- {{ formset.management_form }} -->
+                    <!-- {% for forms in formset %}
+                        {{forms}} -->
                     <!-- <input type="file" class="coba">
                                             <input type="file" class="coba">
                                             <input type="file" class="coba">
                                             <input type="file" class="coba"> -->
-                    {% endfor %}
+                    <!-- {% endfor %} -->
                 </div>
             </div>
             <div class="form-group row ">
@@ -66,11 +66,13 @@
             <div class="form-group row">
                 <div class="col-sm-10">
                     <button type="submit" class="btn btn-success">Tambah</button>
-                    <a href="" class="btn btn-danger">Batal</a>
+                    <a href="{% url 'daftar-barang' %}" class="btn btn-danger">Batal</a>
                 </div>
             </div>
         </form>
     </div>
+
+    
 
 
     <footer class="d-flex justify-content-between mt-5 mb-5 ">
